--- a/E02.html
+++ b/E02.html
@@ -5,14 +5,32 @@
     //Melancia: 3 Kg
     //Abacate: 4 Unidades
     //Cebola: 1.1 Kg
-    //Peça para o usuário informar o preço do Kg ou da Unidade de cada um dos produtos que comprou (citados acima) e peça também para o usuário informar quanto dinheiro possui para realizar a compra.
-    //Calcule o custo total dos alimentos e verifique se há dinheiro suficiente para realizar a compra, indicando se sobrará ou faltará dinheiro, e também apresentando qual foi a quantia que sobrou ou faltou para realizar a compra. Apresente também na tela o valor total da compra.
+    //Peça para o usuário informar o preço do Kg ou da Unidade de cada um dos produtos que comprou (citados acima) e peça também para o usuário 
+    //informar quanto dinheiro possui para realizar a compra.
+    //Calcule o custo total dos alimentos e verifique se há dinheiro suficiente para realizar a compra,
+    // indicando se sobrará ou faltará dinheiro, e também apresentando qual foi a quantia que sobrou ou faltou para realizar a compra.
+    // Apresente também na tela o valor total da compra.
 
     //ENTRADA
-
+    const mamao = Number(prompt(`Qual valor da unidade do mamão?`).trim().replace(",","."));
+    const melancia = Number(prompt(`Qual valor do quilo da melancia?`).trim().replace(",","."));
+    const abacate = Number(prompt(`Qual valor da unidade do abacate?`).trim().replace(",","."));
+    const cebola = Number(prompt(`Qual valor do quilo da cebola?`).trim().replace(",","."));
+    const dinheiro = Number(prompt(`Quantos reais você tem para realizar a compra?`).trim().replace(",","."));
 
     //PROCESSAMENTO
+    const totalCompra = (mamao*5)+(melancia*3)+(abacate*4)+(cebola*1.1);
+    const trocoFalta = dinheiro-totalCompra;
 
+    if(totalCompra>dinheiro){
+        alert(`Faltam R$${trocoFalta.toFixed(2).replace(".",",")}. Valor da compra: R$${totalCompra.toFixed(2).replace(".",",")}`);
+    }
+    else if(dinheiro>totalCompra){
+        alert(`Sobrou R$${trocoFalta.toFixed(2).replace(".",",")}. Valor da compra: R$${totalCompra.toFixed(2).replace(".",",")}`);
+    }
+    else if(dinheiro==totalCompra){
+        alert(`Não sobrou e nem faltou dinheiro. Valor da compra: R$${totalCompra.toFixed(2).replace(".",",")}`);
+    }
 
     //SAÍDA
 
