--- a/E03.html
+++ b/E03.html
@@ -10,7 +10,7 @@
     //Caso não possa viajar o programa apresentará a mensagem "Sem Férias" e também apresentará "quantos dinheiros" (R$) estão faltando para realizar a viagem.
 
     //ENTRADA
-    const viagem = prompt(`Insira o estado para qual você quer realizar a viagem. Responta com RS(Rio Grande do Sul) ou MG(Minas Gerais) `).trim();
+    const viagem = prompt(`Insira o estado para qual você quer realizar a viagem. Responta com RS(Rio Grande do Sul) ou MG(Minas Gerais) `).trim().toLowerCase();
     const dias = Number(prompt(`Quantos dias você ficará em viagem?`).trim());
     const dinheiro = Number(prompt(`Quantos reais você possui para gastar na viagem?`).trim().replace(",","."));
 
